# faire-todo-app

./: .editorconfig  .gitattributes  .gitignore  LICENSE  README.md  angular.json  build_and_publish_ppa.sh  compilation-time-optimization(pt-BR).md  eslint.config.js  karma.conf.js  net.charlesschaefer.fairetodoapp.yml  package-lock.json  package.json  snapcraft.yaml  transloco.config.ts  tsconfig.app.json  tsconfig.json  tsconfig.spec.json
.cursor/rules/: cursor.mdc  instructions.md
.github/workflows/: android.yml  main.yml  snapcraft.yml
bundle-scripts/: build-flatpak.sh  net.charlesschaefer.fairetodoapp.metainfo.xml  net.charlesschaefer.fairetodoapp.yml
debian/: cargo.config  changelog  control  copyright  fairetodoapp.desktop  fairetodoapp.install  files  rules
debian/source/: include-binaries
docs/: task_add_overlay_events.dia
scripts/: apply-supabase-url.ts  generate-environment.js  version-bumper.js
src/: index.html  main.ts  styles.scss  test.ts
src-tauri/: .gitignore  Cargo.toml  assetlinks.json  faire-todo-app.desktop.template  snapcraft-tauri.conf.json  tauri.android.conf.json  tauri.conf.json  tauri.linux.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: android.rs  data.rs  desktop.rs  http.rs  lib.rs  main.rs  mdns.rs  notification.rs
src/app/: app.component.html  app.component.scss  app.component.ts  app.config.ts  app.db.ts  app.debug.ts  app.routes.ts  app.rxdb.ts  app.theme.ts  app.worker.ts  calendar.config.ts  db.config.ts  db.ts
src/app/all-tasks/: all-tasks.component.html  all-tasks.component.spec.ts  all-tasks.component.ts
src/app/auth/: auth.component.html  auth.component.scss  auth.component.ts  auth.service.ts
src/app/auth/callback/: callback.component.ts
src/app/db/: app.db.ts  db.service.ts  sync.service.ts
src/app/directives/: change-date-time-from-text.directive.spec.ts  change-date-time-from-text.directive.ts  ngx-cdk-dn-dscroll-fixer.directive.spec.ts  ngx-cdk-dn-dscroll-fixer.directive.ts
src/app/dto/: project-dto.ts  settings-dto.ts  tag-dto.ts  task-attachment-dto.ts  task-dto.spec.ts  task-dto.ts  task-tag-dto.ts  updatable.ts  user-bound.ts  user-dto.ts
src/app/inbox/: inbox.component.html  inbox.component.scss  inbox.component.spec.ts  inbox.component.ts  inbox.resolver.spec.ts  inbox.resolver.ts
src/app/keyboard-shortcuts/: keyboard-shortcuts.component.ts
src/app/license/: license.component.html  license.component.ts
src/app/onboarding/: onboarding.component.html  onboarding.component.scss  onboarding.component.ts
src/app/pipes/: date-shortener.pipe.spec.ts  date-shortener.pipe.ts  linkify.pipe.spec.ts  linkify.pipe.ts  subtitle.pipe.spec.ts  subtitle.pipe.ts
src/app/project/: project.component.html  project.component.scss  project.component.ts  project.service.spec.ts  project.service.ts
src/app/project/project-tasks/: project-tasks.component.html  project-tasks.component.scss  project-tasks.component.spec.ts  project-tasks.component.ts
src/app/right-panel/: right-panel.component.html  right-panel.component.ts
src/app/search/: search.component.html  search.component.scss  search.component.spec.ts  search.component.ts
src/app/services/: auth.service.ts  backup.service.spec.ts  backup.service.ts  calendar.service.ts  data-updated.service.spec.ts  data-updated.service.ts  db.service.ts  file-picker.service.ts  keyboard-shortcut.service.ts  notification.service.ts  otp-generator.service.spec.ts  otp-generator.service.ts  project.service.ts  service.abstract.spec.ts  service.abstract.ts  settings.service.ts  supabase.service.ts  sync.service.ts  tag.service.spec.ts  tag.service.ts  task-attachment.service.ts  task-tag.service.spec.ts  task-tag.service.ts  task.service.spec.ts  task.service.ts  theme.service.ts  undo.service.spec.ts  undo.service.ts  user.service.ts
src/app/settings/: settings.component.html  settings.component.scss  settings.component.ts  settings.service.ts
src/app/sidemenu/: sidemenu.component.html  sidemenu.component.scss  sidemenu.component.spec.ts  sidemenu.component.ts
src/app/synchronization/: synchronization.component.html  synchronization.component.scss  synchronization.component.spec.ts  synchronization.component.ts
src/app/task/: task.component.html  task.component.ts  task.service.spec.ts  task.service.ts
src/app/task-add/: task-add.component.html  task-add.component.scss  task-add.component.spec.ts  task-add.component.ts
src/app/task-attachment/: task-attachment.component.html  task-attachment.component.spec.ts  task-attachment.component.ts
src/app/task-list/: task-list.component.html  task-list.component.scss  task-list.component.ts
src/app/task/subtask/: subtask.component.scss  subtask.component.spec.ts  subtask.component.ts
src/app/task/task/: task.abstract.component.ts  task.component.html  task.component.scss  task.component.ts
src/app/task/task-add/: task-add.component.html  task-add.component.scss  task-add.component.ts
src/app/task/task-attachment/: task-attachment.component.html  task-attachment.component.scss  task-attachment.component.spec.ts  task-attachment.component.ts
src/app/task/task-edit/: task-edit.component.html  task-edit.component.scss  task-edit.component.spec.ts  task-edit.component.ts
src/app/task/task-list/: task-list.component.html  task-list.component.scss  task-list.component.ts
src/app/testsync/: testsync.component.html  testsync.component.scss  testsync.component.ts
src/app/testsync/dto/: testsync.dto.ts
src/app/testsync/services/: testsync.service.ts
src/app/today/: today.component.html  today.component.spec.ts  today.component.ts
src/app/upcoming/: upcoming.component.html  upcoming.component.spec.ts  upcoming.component.ts
src/app/utils/: file-utils.ts
src/app/version/: version.component.html  version.component.ts
src/assets/: redirect.htm
src/assets/i18n/: en.json  es.json  pt-BR.json  pt-br.json
src/assets/i18n/primeng/: en.json  pt-br.json
src/environments/: environment.prod.ts
src/utils/: functions.ts
(+3 files in other folders)
