#cargo-features = ["codegen-backend"]

[package]
name        = "faire-todo-app"
version = "0.0.66"
description = "Faire Todo App"
authors     = ["Charles Schaefer"]
edition     = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name       = "faire_todo_app_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = "2"

[dependencies]
tauri                     = { version = "2", features = ["devtools", "image-png", "tray-icon"] }
serde                     = { version = "1", features = ["derive"] }
mdns-sd                   = "0.13"
hostname                  = "0.4.0"
local-ip-addr             = "0.1.1"
hyper                     = { version = "1.6.0", features = ["full"] }
http-body-util            = "0.1.2"
hyper-util                = { version = "0.1.10", features = ["full"] }
tokio                     = { version = "1.44.2", features = ["net", "rt-multi-thread", "sync"] } #"full"] }
bytes                     = { version = "1.10.1", default-features = false }
lazy_static               = "1.5.0"
chrono                    = "0.4.40"
tauri-plugin-deep-link    = "2"
tauri-plugin-dialog       = "2"
tauri-plugin-fs           = "2"
tauri-plugin-http         = "2"
tauri-plugin-notification = "2"
tauri-plugin-opener       = "2"
tauri-plugin-os           = "2"
tauri-plugin-sharetarget  = "0.1.6"
tauri-plugin-shell        = "2"
base64                    = "0.22.1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart       = "2"
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
tauri-plugin-updater         = "2"



[profile.dev]
opt-level = 1
incremental = true

[profile.release]
codegen-units = 16
lto = "thin"
opt-level = "s"
panic = "abort"
strip = true


[profile.dev.package."*"]
opt-level = 3

#codegen-backend = "cranelift"
