#cargo-features = ["codegen-backend"]
#cargo-features = ["profile-rustflags"]

[package]
name        = "faire-todo-app"
version = "0.0.73"
description = "Faire Todo App - An open-source task management application that helps you organize your life across all your devices."
authors     = ["Charles Schaefer"]
edition     = "2021"
keywords     = ["tasks", "todo", "productivity", "tauri", "angular", "rust"]
homepage     = "https://fairetodo.app"
license      = "MIT"
#license-file = "../LICENSE"
readme       = "../README.md"
repository   = "https://github.com/charlesschaefer/faire-todo-app.git"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name       = "faire_todo_app_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri                     = { version = "2", features = ["devtools", "image-png", "tray-icon"] }
serde                     = { version = "1", features = ["derive"] }
mdns-sd                   = "0.15.1"
hostname                  = "0.4.0"
local-ip-addr             = "0.1.1"
hyper                     = { version = "1.6.0", features = ["full"] }
http-body-util            = "0.1.2"
hyper-util                = { version = "0.1", features = ["full"] }
tokio                     = { version = "1", features = ["net", "rt-multi-thread", "sync"] } #"full"] }
bytes                     = { version = "1.10.1", default-features = false }
lazy_static               = "1.5.0"
chrono                    = "0.4.40"
tauri-plugin-deep-link    = "2"
tauri-plugin-dialog       = "2"
tauri-plugin-fs           = "2"
tauri-plugin-http         = "2"
tauri-plugin-notification = "2"
tauri-plugin-opener       = "2.5.0"
tauri-plugin-os           = "2"
tauri-plugin-sharetarget  = "0.1.6"
tauri-plugin-shell        = "2"
base64                    = "0.22.1"
serde_json                = { version = "1", features = ["std"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart       = "2"
tauri-plugin-single-instance = { version = "2.3.4", features = ["deep-link"] }
tauri-plugin-updater         = "2"

[features]
flatpak = []
snap    = []


[profile.dev]
opt-level = 1
incremental = true

[profile.release]
codegen-units = 16
lto = "thin"
opt-level = "s"
panic = "abort"
strip = true


[profile.dev.package."*"]
opt-level = 3

#codegen-backend = "cranelift"

[target.x86_64-unknown-linux-gnu]
linker = "clang"
rustflags = [
    "-Zthreads=8",
    "-C",
    # Mold only supports x86_64
    "link-arg=-fuse-ld=/usr/bin/mold",
    "-Zcodegen-backend=cranelift",
    # "-Zshare-generics=y",
]

[target.arm64-linux-android]
rustflags = [
    "-Zthreads=8",
    "-C",
    # Mold only supports x86_64
    "link-arg=-fuse-ld=/usr/bin/mold",
]
[target.aarch64-linux-android]
rustflags = [
    "-Zthreads=8",
    "-C",
    # Mold only supports x86_64
    "link-arg=-fuse-ld=/usr/bin/mold",
]
