#cargo-features = ["codegen-backend"]
#cargo-features = ["profile-rustflags"]

[package]
name        = "faire-todo-app"
version = "0.0.77"
description = "Faire Todo App - An open-source task management application that helps you organize your life across all your devices."
authors     = ["Charles Schaefer"]
edition     = "2021"
keywords     = ["tasks", "todo", "productivity", "tauri", "angular", "rust"]
homepage     = "https://fairetodo.app"
license      = "MIT"
#license-file = "../LICENSE"
readme       = "../README.md"
repository   = "https://github.com/charlesschaefer/faire-todo-app.git"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name       = "faire_todo_app_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64                    = "0.22.1"
bytes                     = { version = "1.10.1", default-features = false }
chrono                    = "0.4.40"
hostname                  = "0.4.0"
http-body-util            = "0.1.2"
hyper                     = { version = "1.6.0", features = ["full"] }
hyper-util                = { version = "0.1", features = ["full"] }
lazy_static               = "1.5.0"
local-ip-addr             = "0.1.1"
mdns-sd                   = "0.15.1"
serde                     = { version = "1", features = ["derive"] }
serde_json                = { version = "1", features = ["std"] }
tauri                     = { version = "2", features = ["devtools", "image-png", "tray-icon"] }
tauri-plugin-deep-link = "2.4.5"
tauri-plugin-dialog = "2.4.2"
tauri-plugin-fs = "2.4.4"
tauri-plugin-http = "2.5.4"
tauri-plugin-notification = "2.3.3"
tauri-plugin-opener = "2.5.2"
tauri-plugin-os = "2.3.2"
tauri-plugin-sharetarget = "0.1.6"
tauri-plugin-shell = "2.3.3"
tokio                     = { version = "1", features = ["net", "rt-multi-thread", "sync"] } #"full"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart       = "2.5.1"
tauri-plugin-single-instance = { version = "2.3.6", features = ["deep-link"] }
tauri-plugin-updater         = "2.9.0"

[features]
flatpak = []
snap    = []


[profile.dev]
opt-level = 1
incremental = true

[profile.release]
codegen-units = 16
lto = "thin"
opt-level = "s"
panic = "abort"
strip = true


[profile.dev.package."*"]
opt-level = 3

#codegen-backend = "cranelift"

[target.x86_64-unknown-linux-gnu]
linker = "clang"
rustflags = [
    "-Zthreads=8",
    "-C",
    # Mold only supports x86_64
    "link-arg=-fuse-ld=/usr/bin/mold",
    "-Zcodegen-backend=cranelift",
    # "-Zshare-generics=y",
]

[target.arm64-linux-android]
rustflags = [
    "-Zthreads=8",
    "-C",
    # Mold only supports x86_64
    "link-arg=-fuse-ld=/usr/bin/mold",
]
[target.aarch64-linux-android]
rustflags = [
    "-Zthreads=8",
    "-C",
    # Mold only supports x86_64
    "link-arg=-fuse-ld=/usr/bin/mold",
]
